[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "quizen"
version = "0.1.0"
description = "Quizen pipeline and data models"
authors = [{name = "Quizen"}]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "httpx>=0.26",
    "google-api-python-client>=2.130",
    "google-auth>=2.28",
    "google-auth-oauthlib>=1.2",
    "fastapi>=0.115",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: tests that call external Google APIs when credentials are provided",
]
